--- a/styles/reset.css
+++ b/styles/reset.css
@@ -26,8 +26,6 @@ section {
 body {
   line-height: 1;
   font-family: 'Roboto', sans-serif;
-  background: url(../assets/icons/path.svg) no-repeat;
-  background-position: right top;
 }
 ol,
 ul {
